crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_param_spec_missing_bound.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_param_spec_missing_bound.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..42,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 0..18,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..12,
                            node_index: NodeIndex(None),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 7..11,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 9..10,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                        is_reified: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 15..18,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 19..41,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 24..25,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 25..35,
                            node_index: NodeIndex(None),
                            type_params: [
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 26..30,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 28..29,
                                            node_index: NodeIndex(None),
                                        },
                                        bound: None,
                                        default: None,
                                        is_reified: false,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 32..34,
                                        name: Identifier {
                                            id: Name("T2"),
                                            range: 32..34,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: None,
                                        default: None,
                                        variance: None,
                                        is_reified: false,
                                        is_some_hole: false,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 38..41,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                    is_private: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[**T:] = int
  |            ^ Syntax Error: a bound on a keyword-variadic pack is a basedpython feature and is not valid in .py files
2 | type X[**T:, T2] = int
  |


  |
1 | type X[**T:] = int
2 | type X[**T:, T2] = int
  |            ^ Syntax Error: a bound on a keyword-variadic pack is a basedpython feature and is not valid in .py files
  |
